Refactor user management scripts for improved event handling and add support for empty MySQL root password in Docker configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,9 @@ services:
     environment:
       - MYSQL_DATABASE=soc_pms
       - MYSQL_ROOT_PASSWORD=
+      - MYSQL_ALLOW_EMPTY_PASSWORD=yes  # Add this line
+      # Or set a password:
+      # - MYSQL_ROOT_PASSWORD=your_secure_password
     volumes:
       - mysql_data:/var/lib/mysql
       - ./database/soc_pms.sql:/docker-entrypoint-initdb.d/soc_pms.sql
